# BetaCoVDB

./: README.md  betac.db  pyproject.toml
betacovdb/: _entries.py  db_entry.py  db_utils.py
betacovdb/app/: app.py  main.py  test_api.py
betacovdb/app/static/: styles.css
betacovdb/app/templates/: read_ab_ic.html
tests/: conftest.py  db_entry_test.py  db_utils_test.py
